Use JdbcConnectionDetails to detect Dialect instead of Environment
closes gh-286